# paintera-sam

./: .gitignore  README.md  dev-environment.yml  environment.yml  pyproject.toml
paintera-sam/: daemon.py  main.py  onnx_model.py
paintera_sam/: onnx_model.py  onnx_paintera_predictor.py  paintera_predictor.py  sam_model.py
